# Spider2

./: .gitignore  pyproject.toml
methods/apex-agent-snow/: run.sh
methods/apex-agent-snow/apex_agent/: doc_filter.py  log.py  main.py  pipeline.py
methods/apex-agent-snow/apex_agent/data/: schema_cache.py
methods/apex-agent-snow/apex_agent/inference/: sampler.py  voter.py
methods/apex-agent-snow/apex_agent/llm/: client.py  tokenizer.py
methods/apex-agent-snow/apex_agent/schema_linking/: dual_pruner.py  logical_planner.py  prompts.py  verifier.py
methods/apex-agent-snow/apex_agent/sql_generation/: agent.py  guidance.py  prompts.py  tip_library.py
methods/echo-sql-snow/: convert_to_submission.py  run.sh
methods/echo-sql-snow/echo_sql/: doc_filter.py  main.py  pipeline.py
methods/echo-sql-snow/echo_sql/agent/: echo_agent.py  error_classifier.py  prompts.py  sql_normalizer.py  submit_validator.py  tools.py  trial_memory.py
methods/echo-sql-snow/echo_sql/data/: loader.py
methods/echo-sql-snow/echo_sql/exec/: result_compress.py  snowflake_runner.py
methods/echo-sql-snow/echo_sql/llm/: client.py
methods/echo-sql-snow/echo_sql/preagent/: deterministic_profiler.py  keyword_extractor.py  schema_preprocessor.py  tip_library.py  tip_library.yaml  tip_matcher.py
methods/spider-agent-dbt/: run.py
methods/spider-agent-lite/: run.py
methods/spider-agent-snow/: run.py
methods/spider-agent-snow/spider_agent/agent/: models.py
methods/spider-agent-tc/: run.sh
methods/spider-agent-tc/agent/: llm_agent.py  main.py
